--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
+    "@tailwindcss/forms": "^0.3.3",
+    "axios": "^0.21.1",
+    "mongodb": "^4.0.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
