--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
+    "encoding-japanese": "^1.0.30",
     "mongodb": "^4.0.1",
     "next": "latest",
     "react": "^17.0.2",
+    "react-csv-reader": "^3.3.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.0"
   },
