--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.5.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/forms": "^0.3.3",
