--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.5.0",
+    "@auth0/nextjs-auth0": "^1.9.1",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.3",
-    "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
     "encoding-japanese": "^1.0.30",
     "mongodb": "^4.0.1",
@@ -20,8 +19,9 @@
     "react-hook-form": "^7.12.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "autoprefixer": "10.4.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
